marge with main